Use the è key for avy.

--- a/doom/config.org
+++ b/doom/config.org
@@ -33,10 +33,7 @@
 #+END_SRC
 * Avy
 #+BEGIN_SRC emacs-lisp
-(map! :leader
-      :n "w" 'evil-avy-goto-word-0
-      :n "l" 'evil-avy-goto-line
-      :n "é" 'evil-avy-goto-char)
+(map! :n "è" 'evil-avy-goto-word-0)
 #+END_SRC
 * Flycheck
 #+BEGIN_SRC emacs-lisp
