--- a/doom/config.org
+++ b/doom/config.org
@@ -7,7 +7,7 @@
 #+END_SRC
 ** Font weights
 #+BEGIN_SRC emacs-lisp
-(setq doom-font (font-spec :family "JetBrainsMono" :size 14))
+(setq doom-font (font-spec :family "JetBrains Mono" :size 14))
 #+END_SRC
 ** Redo on U
 #+BEGIN_SRC emacs-lisp
