--- a/doom/config.org
+++ b/doom/config.org
@@ -1,5 +1,9 @@
 #+TITLE:phaazon’s configuration
 
+* Theme
+#+begin_src emacs-lisp
+(setq doom-theme 'doom-one)
+#+end_src
 * Better defaults
 ** Local leader
 #+BEGIN_SRC emacs-lisp
